ebook and reader images resized for xs and sm screens. fixed line too long flake8 warning

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -396,6 +396,13 @@ footer {
 	}
 }
 
+@media (max-width: 768px) {
+	.img_size_mob img {
+		width: 250px;
+		height: 300px;
+	}
+}
+
 @media (min-width: 320px) and (max-width:475px) {
 	.jumbotron {
 		padding-top: 20px;
